--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="row col-6 offset-3" style="margin-top: 3%">
                             <label class="col-3 offset-1" for="volume">Объем:</label>
-                            <input class="col-7" maxlength=10 required style="margin-top: 2%" type="text" name="volume" placeholder="...мл/мг">
+                            <input class="col-7" maxlength=10 required style="margin-top: 2%" type="text" name="volume" placeholder="...мл/гр">
                         </div><br>
 
                         <div class="col-4 offset-4">
