--- a/nginx/static/css/base.css
+++ b/nginx/static/css/base.css
@@ -123,7 +123,25 @@ body {
   border: 1px solid rgb(127, 132, 130);
 }
 
-
-
+@media screen and (orientation:landscape) and (max-width: 1600px) {
+  
+  .scrolled_menu {
+    width: 81%;
+    left: 9.5%;
+  }
+  
+  .slider {
+    height: 60%;
+  }
+  
+  .menu {
+    position: absolute;
+    top: 4%;
+    width: 13%;
+    left: 15%;
+    text-align: center;
+  }
+  
+}
 
 
