--- a/templates/order_list.html
+++ b/templates/order_list.html
@@ -87,7 +87,7 @@
                             <td class="col-1">{{ order.quantity }}</td>
                             <td class="col-1">{{ order.sugar }}</td>
                             <td style="text-align: center; padding:2%; line-height: 0.5" class="col-2">
-                                <div class="row">
+                                <div class="row" style="line-height: 1">
                                     {% for extra in order.extras.all %}
                                         <div class="col-12">
                                             <p>{{ extra.name|linebreaksbr }},</p>
