quick fixes (menu order by id, main_menu width)

--- a/nginx/static/css/base.css
+++ b/nginx/static/css/base.css
@@ -133,8 +133,8 @@ body {
 @media screen and (orientation:landscape) and (max-width: 1600px) {
   
   .scrolled_menu {
-    width: 81%;
-    left: 9.5%;
+    width: 100%;
+    left: 0;
   }
   
   .slider {
