--- a/templates/edit_item.html
+++ b/templates/edit_item.html
@@ -65,7 +65,7 @@
                                     <tr id="ingredient">
                                         <td class="col-2" id="number">1</td>
                                         <td class="col-5" id="name" onclick="show_input(this)"></td>
-                                        <td class="col-2" style="color: red" onclick="remove_ingredient(this)">X</td>
+                                        <td class="col-2" style="color: red" onclick="remove_ingredient(this)">Удалить</td>
                                     </tr>
 
                                 {% else %}
@@ -73,13 +73,13 @@
                                         <tr id="ingredient">
                                         <td class="col-2" id="number">{{ extra.list_number }}</td>
                                         <td class="col-5" id="name" onclick="show_input(this)"><input type="text" name="input_{{ extra.list_number }}" value="{{ extra.name }}"></td>
-                                        <td class="col-2" style="color: red" onclick="remove_ingredient(this)">X</td>
+                                        <td class="col-2" style="color: red" onclick="remove_ingredient(this)">Удалить</td>
                                     </tr>
                                     {% endfor %}
                                     <tr id="ingredient" style="display:none">
                                         <td class="col-2" id="number">1</td>
                                         <td class="col-5" id="name" onclick="show_input(this)"></td>
-                                        <td class="col-2" style="color: red" onclick="remove_ingredient(this)">X</td>
+                                        <td class="col-2" style="color: red" onclick="remove_ingredient(this)">Удалить</td>
                                     </tr>
                                 {% endif %}
                             </tbody>
