--- a/templates/add_item.html
+++ b/templates/add_item.html
@@ -56,7 +56,7 @@
                                 <tr id="ingredient">
                                     <td class="col-2" id="number">1</td>
                                     <td class="col-5" id="name" onclick="show_input(this)"></td>
-                                    <td class="col-2" style="color: red" onclick="remove_ingredient(this)">X</td>
+                                    <td class="col-2" style="color: red" onclick="remove_ingredient(this)">Удалить</td>
                                 </tr>
                             </tbody>
                          </table>
